adding invoice number to schema
