# herecrm-pwa-openapi.yaml
@@ -2870,6 +2870,12 @@ components:
           type: integer
           minimum: 1.0
           title: Job Id
+        invoice_number:
+          anyOf:
+          - type: string
+            maxLength: 50
+          - type: 'null'
+          title: Invoice Number
         total_amount:
           type: number
           minimum: 0.0
@@ -3415,6 +3421,12 @@ components:
           type: integer
           minimum: 1.0
           title: Customer Id
+        quote_number:
+          anyOf:
+          - type: string
+            maxLength: 50
+          - type: 'null'
+          title: Quote Number
         total_amount:
           type: number
           minimum: 0.0
